--- a/style.css
+++ b/style.css
@@ -62,6 +62,16 @@
   margin: auto;
 }
 
+.width-60{
+  width: 60%;
+  margin: auto;
+}
+
+.width-50{
+  width: 50%;
+  margin: auto;
+}
+
 .birthday-card-1 {
   background-image: url("./birthday-card-1.jpg");
   background-repeat: no-repeat;
